<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="400dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="558dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/textView1"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="400dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="498dp"
        android:background="#1BA29E9E"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/textView2"
        android:textAlignment="viewStart"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="472dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/textView3"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="141dp"
        android:layout_height="41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="426dp"
        android:contextClickable="false"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/editText1"
        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textColorHighlight="@android:color/holo_blue_dark"
        android:textColorLink="#FF9800"
        android:textCursorDrawable="@android:color/holo_blue_light"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="141dp"
        android:layout_height="22dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="470dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/textView4"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="141dp"
        android:layout_height="41dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="426dp"
        android:contextClickable="false"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/editText2"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textColorLink="#FF9800"
        android:textCursorDrawable="@android:color/holo_blue_light"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="142dp"
        android:layout_height="19dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="189dp"
        android:layout_marginEnd="262dp"
        android:layout_marginBottom="395dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/textView5"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="141dp"
        android:layout_height="41dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="353dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorLink="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="136dp"
        android:layout_height="17dp"
        android:layout_marginStart="266dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="394dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/textView6"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="136dp"
        android:layout_height="43dp"
        android:layout_marginStart="266dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="352dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorLink="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="180dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="258dp"
        android:layout_marginEnd="223dp"
        android:layout_marginBottom="299dp"
        android:background="@drawable/ic_launcher_background"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/button1"
        android:textAlignment="center"
        android:textColor="#F7F8FA"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="46dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="258dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="299dp"
        android:background="@drawable/ic_launcher_background"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/button2"
        android:textAlignment="center"
        android:textColor="#F7F8FA"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="400dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="232dp"
        android:background="#1BA29E9E"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/textView7"
        android:textAlignment="viewStart"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="390dp"
        android:layout_height="22dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="209dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/textView8"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="409dp"
        android:layout_height="207dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="394dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        android:listSelector="@android:color/holo_blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>